--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+html {
+    font-family: cursive;
+}
+li{
+  background-color: Purple;
+  color:white;
+   padding: 7px;
+  border: 3px solid black;
+  margin: 10px;
+  display:
+  ;
+ } 
