--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -22,6 +22,9 @@
         Order lug nuts
   
        </li>
+        <div id='stars'></div>
+        <div id='stars2'></div>
+        <div id='stars3'></div>
 </ul>
 
 
