--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -3,23 +3,23 @@
 <ul>
         <li>
             <input type="checkbox" value="buy turbo"> 
-            buy turbo
+            <a href="/todo/show/1">buy turbo</a>
             </li>
     <li>
-         <input type="checkbox" value="get bbs rims"> 
-        get bbs rims
+         <input type="checkbox" value="get bbs rims">
+          <a href="/todo/show/1">get bbs rims</a>
         </li>
     <li>
          <input type="checkbox" value="Buy RB26"> 
-        Buy RB26
+        <a href="/todo/show/1">Buy RB26</a>
         </li>
     <li>
          <input type="checkbox" value="Research rocketbunny bodykit"> 
-        Research rocketbunny bodykit
+        <a href="/todo/show/1">Research rocketbunny bodykit</a>
         </li>
     <li>
         <input type="checkbox" value="Order lug nuts"> 
-        Order lug nuts
+        <a href="/todo/show/1">Order lug nuts</a>
   
        </li>
         <div id='stars'></div>
